# Trigon

./: .gdb_history  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json  config.json  multi.sh  pallet.py  trigon
scripts/: delaunay.sh
src/: color.cpp  color.h  color.hpp  config.hpp  delaunay.cpp  delaunay.h  main.cpp  old_color.h  opts.cpp  opts.hpp  pallet.cpp  pallet.h  terminal.cpp  terminal.hpp  tingo.hpp  triangle.hpp
src/delaunay/: delaunay.cpp  delaunay.hpp
src/image/: image.cpp  image.hpp  jpeg.cpp  jpeg.hpp  png.cpp  png.hpp  svg.cpp  svg.hpp
src/img/: image.cpp  image.hpp  img.hpp  png.cpp  png.hpp  svg.cpp  svg.hpp
src/util/: argparse.cpp  argparse.hpp  format.cpp  format.hpp  log.cpp  log.hpp  string.hpp  time.cpp  time.hpp  util.hpp
