CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT(Trigon CXX)


SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)


FILE(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")
ADD_EXECUTABLE(trigon ${SRC})

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/external/triangle")

FIND_PACKAGE(Threads REQUIRED)
TARGET_LINK_LIBRARIES(trigon ${CMAKE_TRHEAD_LIBS_INIT} triangle)
TARGET_INCLUDE_DIRECTORIES(trigon PRIVATE "${PROJECT_SOURCE_DIR}/external/triangle/")
FIND_PACKAGE(PNG)
if(PNG_FOUND)
  ADD_DEFINITIONS(-DTRIGON_PNG)
  TARGET_LINK_LIBRARIES(trigon ${PNG_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(trigon PUBLIC ${PNG_INCLUDE_DIRS})
endif()
FIND_PACKAGE(JPEG)
if(JPEG_FOUND)
  ADD_DEFINITIONS(-DTRIGON_JPEG)
  TARGET_LINK_LIBRARIES(trigon ${JPEG_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(trigon PUBLIC ${JPEG_INCLUDE_DIR})
endif()

IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json")
  EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
    )
ENDIF()
